# BCI-naojijiekou

./: .gitignore
EEG-ATCNet/: 3.py  download.py  main_TrainTest.py  main_TrainValTest.py  preprocess.py
EEG-ATCNet/ZHUSHI/: canshu.ipynb  train.ipynb
EEG-ATCNet/results/: log.txt
EEG-ATCNet/results_pytorch_gpu2/: best models1.txt  log.txt  log1.txt
EEG-ATCNet/results_pytorch_gpu2/saved models1/run-1/: subject-1.pth  subject-2.pth  subject-3.pth  subject-4.pth  subject-5.pth  subject-6.pth  subject-7.pth  subject-8.pth  subject-9.pth
EEG-Conformer-main/: refine_conformer.py  self_conformer.py  self_conformer2.py  self_conformer_notime_Encode.py  self_conformer_time_Encode.py  ysh_conformer_wandb_tqdm_datafile.py
EEG-Conformer-main/preprocessing/: 1.ipynb  BCIIV2a.asv  BCIIV2a.m  a1.m  getData.m  pre_multi_process_mat.py  pre_process_mat.py  run.m
EEG-Conformer-main/preprocessing/biosig-3.9.0/: .gitignore  Makefile.in  NEWS  README  RELEASE-NOTES  TESTED  config.h.in  configure.ac
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4c++/: CMakeLists.txt  DESCRIPTION  INSTALL  Makefile.in  Makefile.win32  README  VERSION  biosig.c  biosig2gdf.c  biosig_fhir.c  config.h.in  pu.c  save2gdf.c  units.awk
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4c++/R/: CITATION  DESCRIPTION.in  Makefile.in  sload.r
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4c++/R/man/: biosig.Rd
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4c++/R/src/: biosig4r.c
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4c++/XMLParser/: tinyxml.cpp
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4c++/igor/: IgorBin.h  Makefile.in  patchIgorXOPs.diff  xopSLOAD.c
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4c++/igor/ptn003/: CrossPlatformFileIO.c  IgorSupport.c  PackedFile.h  PackedFileDemo.c  PackedFileDemo.h  ReadPackedFile.c  ReadWave.c  WritePackedFile.c  WriteWave.c
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4c++/igor/tn003/: IgorBin.h  ReadWave.c  TestWave.c  WriteWave.c
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4c++/java/: Biosig.c  Biosig.java  Makefile.in
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4c++/macports/: insert_checksums.sh
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4c++/macports/science/libbiosig/: Portfile  Portfile.in
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4c++/magic/: biosig
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4c++/mex/: DESCRIPTION  Makefile.in  mexSSAVE.cpp
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4c++/mma/: INSTALL  Makefile.in  Makefile.win32  README  biosig.c  biosig.tm
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4c++/python/: Makefile.in  build-wheels-for-windows.sh  demo2.py  hello.c  pyproject.toml.in  setup.py.in
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4c++/ruby/: Makefile.in
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4c++/src/: flowmon2.c
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4c++/t210/: abfheadr.h  axon_structs.h  codes.h  sopen_abf_read.c  sopen_axg_read.c  sopen_cfs_read.c  sopen_dcmtk_read.cpp  sopen_famos_read.c  sopen_heka_read.c  sopen_rhd2000_read.c  sopen_scp_read.c  sopen_tdms_read.c  structures.h
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4c++/t230/: sopen_hl7aecg.cpp
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4c++/t240/: OCTET_STRING.c
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4c++/test0/: sandbox.c
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4c++/win32/: README  bin2rec.bat  getdelim.c  getline.c  getlogin.c  heka2itx.bat  rec2bin.bat  save2aecg.bat  save2scp.bat
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4matlab/demo/: Contents.m  select_sweeps.m
EEG-Conformer-main/preprocessing/biosig-3.9.0/biosig4matlab/t330_StimFit/: demo_stimfit.m  microstimfit.m
EEG-Conformer-main/preprocessing/biosig-3.9.0/tools/: biosig_vhdr_generator.sh  template.vhdr  template.vmrk
EEG-Conformer-main/results/: log_subject1.txt  log_subject2.txt  log_subject3.txt  log_subject4.txt  log_subject5.txt  log_subject6.txt  log_subject7.txt  log_subject8.txt  log_subject9.txt
EEG-Conformer-main/visualization/: 1.py  merged_train_label.npy  topography.py
pythonProject/: A03.npy  A04.npy  EEGNET_MODEL.pth  EEGNet.py  EEG_TCNet.pth  Main.py  Main2.py  Main3.py  Time_counter.py  test.py
pythonProject/PRE_PROCESS/: NPY2CSV.py  data_plt.py  for_A04test.py  for_A04test_E_serie.py  pre_multi_process.py  pre_multi_process_mat.py  pre_process.py  pre_process_E_serie.py  tool_mat_process.py
pythonProject/self_Datasets/: BCICIV_free_Cut.py  pre_process_test.py
